@@ -1,3 +1,7 @@
+2001-05-28  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* library/init.tcl (unknown): removed errant " in error message
+
 2001-05-27  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/regc_locale.c: updated character class range data for
